# android-ogg-vorbis-prefab

./: .gitignore  .gitmodules  LICENSE  README.md  build-all.sh  build.gradle.kts  settings.gradle.kts
.github/workflows/: android.yml
gradle/: libs.versions.toml
ogg/: CMakeLists.txt  build.gradle.kts
ogg/src/main/prefab-export/ogg/include/ogg/: config_types.h
oggvorbis/: CMakeLists.txt  build.gradle.kts
vorbis/: CMakeLists.txt  build.gradle.kts
